@@ -4,7 +4,6 @@ import com.example.heroes.heroes.domain.HeroRepository;
 import com.example.heroes.shared.domain.criteria.Criteria;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public final class HeroesSearcher {
 
@@ -17,6 +16,6 @@ public final class HeroesSearcher {
     public List<HeroResponse> search(Criteria criteria) {
         return repository.search(criteria)
                 .stream().map(HeroResponse::fromAggregate)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
