@@ -4,7 +4,6 @@ import com.example.heroes.shared.domain.criteria.Criteria;
 import com.example.heroes.villains.domain.VillainRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public final class VillainsSearcher {
 
@@ -17,6 +16,6 @@ public final class VillainsSearcher {
     public List<VillainResponse> search(Criteria criteria) {
         return repository.search(criteria)
                 .stream().map(VillainResponse::fromAggregate)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
